--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Ibus Driver</title>
 
   <base href="/" />
 
+  <script>
+    window.onerror = function (message, url, line, column, error) {
+      console.log(message, url, line, column, error);
+    }
+    foo(); // call function declared in app.js
+    </script>
+    <script src="http://cf11.travelsoft.gr" crossorigin="anonymous"></script>
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
